@@ -1,9 +1,11 @@
 package com.windev.comment_service.service.impl;
 
+import com.windev.comment_service.client.ReactionClient;
 import com.windev.comment_service.client.UserClient;
 import com.windev.comment_service.dto.request.CreateCommentRequest;
 import com.windev.comment_service.dto.request.UpdateCommentRequest;
 import com.windev.comment_service.dto.response.CommentDto;
+import com.windev.comment_service.dto.response.ReactionDto;
 import com.windev.comment_service.dto.response.UserDto;
 import com.windev.comment_service.entity.Comment;
 import com.windev.comment_service.mapper.CommentMapper;
@@ -18,6 +20,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -25,6 +28,8 @@ public class CommentServiceImpl implements CommentService {
     private final CommentMapper commentMapper;
     private final CommentRepository commentRepository;
     private final UserClient userClient;
+    private final ReactionClient reactionClient;
+
 
     @Override
     @Transactional
@@ -77,8 +82,7 @@ public class CommentServiceImpl implements CommentService {
     @Override
     @Transactional(readOnly = true)
     public PaginatedResponse<CommentWithUserResponse> getCommentsByArticle(Long articleId, Pageable pageable) {
-        // Lấy danh sách bình luận theo bài viết
-        return convertToPaginatedResponseDto(commentRepository.findByArticleIdAndParentCommentIsNull(articleId, pageable));
+        return convertToPaginatedResponseDto(commentRepository.findByArticleIdAndParentCommentIsNull(articleId,pageable));
     }
 
     @Override
@@ -88,14 +92,34 @@ public class CommentServiceImpl implements CommentService {
 
     private PaginatedResponse<CommentWithUserResponse> convertToPaginatedResponseDto(Page<Comment> commentPage) {
         List<CommentWithUserResponse> comments = commentPage.getContent().stream().map(comment -> {
+            // Lấy thông tin user từ UserClient
             UserDto userDto = userClient.getUserById(comment.getUserId()).getBody();
             CommentWithUserResponse response = commentMapper.toDtoWithUser(comment, userDto);
 
-            // Map comment và thông tin user thành CommentWithUserResponse
+            // Map child comments (bình luận con)
             response.setChildComments(commentMapper.mapChildCommentsWithUser(comment.getChildComments(), userDto));
+
             return response;
-        }).toList();
+        }).collect(Collectors.toList());
+
+        // Lấy tất cả commentId để gửi batch request đến ReactionClient
+        List<Long> commentIds = commentPage.getContent().stream()
+                .map(Comment::getId)
+                .collect(Collectors.toList());
+
+        // Gọi ReactionClient chỉ một lần với tất cả commentIds
+        List<ReactionDto> reactionsResponse = reactionClient.getReactionsByComments(commentIds).getBody();
+
+        // Ánh xạ các reactions vào từng comment
+        comments.forEach(comment -> {
+            List<ReactionDto> commentReactions = reactionsResponse.stream()
+                    .filter(reaction -> reaction.getCommentId().equals(comment.getId()))
+                    .collect(Collectors.toList());
+            comment.setReactions(commentReactions); // Set phản ứng cho mỗi comment
+        });
+
         return new PaginatedResponse<>(comments, commentPage.getNumber(), commentPage.getSize(),
                 commentPage.getTotalPages(), commentPage.getTotalElements(), commentPage.isLast());
     }
+
 }
